--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer-Zone</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,900;1,700&family=Open+Sans:wght@400;800&family=Space+Mono:wght@700&family=Work+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    
+    <header>
+        <nav>                 
+             <div class="nav-title">
+                        <img class="logo" src="./images/Frame.png" alt="">
+                        <h3><span class="G">G</span>amer</h3>
+                </div>
+                    <div class="nav-content">
+                        <p class="nav-des">About us</p>
+                        <p class="nav-des">Developers</p>
+                        <p class="nav-des f">Follow us on
+                            <img src="./images/youtube.png" alt="">
+                            <img src="./images/tik-tok.png" alt="">
+                        </p>
+                 </div>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
