gamer part added

--- a/index.html
+++ b/index.html
@@ -20,14 +20,41 @@
                         <p class="nav-des">About us</p>
                         <p class="nav-des">Developers</p>
                         <p class="nav-des f">Follow us on
-                            <img src="./images/youtube.png" alt="">
-                            <img src="./images/tik-tok.png" alt="">
+                            <a href="https://www.youtube.com/"><img src="./images/youtube.png" alt=""></a>
+                            <a href="https://www.tiktok.com/"><img src="./images/tik-tok.png" alt=""></a>
                         </p>
                  </div>
         </nav>
+        <section class="banner">
+                <div class="banner-container">
+                    <div class="banner-content">
+                        <h3 class="instruction">Play Like The</h3>
+                        <h2 class="banner-title">G.O.A.T.</h2>
+                        <p class="banner-des">1-Click instant play</p>
+                        <p class="banner-des">No Download</p>
+                        <p class="banner-des">1000s of supported online games</p>
+                        <div class="btn">
+                            <button class="btn-1">SIGN IN</button>
+                            <button class="btn-1 go">GO ROGUE</button>
+                        </div>
+                    </div>
+                    <img class="banner-pic" src="./images/Group 18.png" alt="">
+                </div>
+        </section>
     </header>
     <main>
-
+        <section class="gamer-container">
+            <div class="gamer">
+                <img class="gamer-pic" src="./images/pngwing 4.png" alt="">
+                <div class="gamer-content">
+                    <h3 class="gamer-title">We are gamer</h3>
+                    <p class="gamer-des">An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+                    <button class="btn-1">Know more</button>
+                    <p class="purpose">Our purpose...</p>
+                    <strong>“unleash the gamer in everyone”</strong>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
