--- a/index.html
+++ b/index.html
@@ -55,6 +55,28 @@
                 </div>
             </div>
         </section>
+        <section class="funny">
+            <div class="funny-container">
+                <div class="funny-content">
+                    <h3 class="funny-title">Online Games <span id="f">Funny Videos</span></h3>
+                    <p class="funny-des">A Collection of Hilarious Videos to Brighten Your Day</p>
+                </div>
+                <div class="funny-img-container">
+                    <figure class="fig"><img src="/images/Rectangle 4.png" alt="">
+                        <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                    </figure>
+                    <figure class="fig"><img src="/images/Rectangle 5.png" alt="">
+                        <p>Did you score? #unblockedgames #school</p>
+                    </figure>
+                    <figure class="fig"><img src="/images/Rectangle 7.png" alt="">
+                        <p>Breaking game records like OG</p>
+                    </figure>
+                    <figure class="fig"><img src="/images/Rectangle 6.png" alt="">
+                        <p>Busted gaming on school laptop, but you are still lit.</p>
+                    </figure>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
