--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer-Zone</title>
+    <link rel="shortcut icon" href="./images/768px-Video-Game-Controller-Icon.svg.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,900;1,700&family=Open+Sans:wght@400;800&family=Space+Mono:wght@700&family=Work+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -74,6 +75,7 @@
                     <figure class="fig"><img src="/images/Rectangle 6.png" alt="">
                         <p>Busted gaming on school laptop, but you are still lit.</p>
                     </figure>
+                    
                 </div>
             </div>
         </section>
