--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer-Zone</title>
     <link rel="shortcut icon" href="./images/768px-Video-Game-Controller-Icon.svg.png" type="image/x-icon">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,900;1,700&family=Open+Sans:wght@400;800&family=Space+Mono:wght@700&family=Work+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -79,9 +81,87 @@
                 </div>
             </div>
         </section>
+
+        <section class="play-instant">
+            <div class="instant-content">
+                <h3 class="instant-heading">
+                   <span class="p">Play Instantly,</span>
+                    No Downloads
+                    No Installs.
+                </h3>
+                <p class="instant-des">
+                    Play games online for free without downloading. Just click the Play button and play instantly in your browser.
+                </p>
+            </div>
+            <div class="instant-img">
+                <img class="instant-pic" src="./images/Rectangle 55.png" alt="">
+                <div class="talking-angle">
+                    <img class="angle" src="./images/Rectangle 66.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <section class="type">
+            <div class="type-of-games">
+                <div class="t-fig-container">
+                    <figure class="t-fig"><img src="/images/Rectangle 11.png" alt="">
+                        <figcaption>Action Games</figcaption></figure>
+                    <figure class="t-fig"><img src="/images/Rectangle 12.png" alt="">
+                        <figcaption>Adventure Games</figcaption></figure>
+                    <figure class="t-fig"><img src="/images/Rectangle 13.png" alt="">
+                        <figcaption>Arcade Games</figcaption></figure>
+                    <figure class="t-fig"><img src="/images/Rectangle 14.png" alt="">
+                        <figcaption>Educational Games</figcaption></figure>
+                    <figure class="t-fig"><img src="/images/Rectangle 15.png" alt="">
+                        <figcaption>Word Games</figcaption></figure>
+                </div>
+                <div class="t-fig-container-2">
+                    <figure class="t-fig"><img src="/images/Rectangle 16.png" alt="">
+                        <figcaption>Role Palying Games</figcaption></figure>
+                    <figure class="t-fig"><img src="/images/Rectangle 17.png" alt="">
+                        <figcaption>Music & Audio Games</figcaption></figure>
+                    <figure class="t-fig"><img src="/images/Rectangle 18.png" alt="">
+                        <figcaption>Puzzle Games</figcaption></figure>
+                    <figure class="t-fig"><img src="/images/Rectangle 19.png" alt="">
+                        <figcaption>Strategy Games</figcaption></figure>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
-
+            <section class="footer">
+                <div class="nav-title f">
+                        <img class="logo" src="./images/Frame.png" alt="">
+                        <h3><span class="G">G</span>amer</h3>
+                </div>
+                <div class="footer-content">
+                    <div class="footer-des">
+                        <ul>
+                            <li>Our Story</li>
+                            <li>Games</li>
+                            <li>Web Games</li>
+                            <li>Careers</li>
+                            <li>Support</li>
+                            <li>My Account</li>
+                        </ul>
+                    </div>
+                    <div class="footer-icons">
+                        <a href=""><i class="fa-brands fa-square-twitter"></i></a>
+                        <a href=""><i class="fa-brands fa-facebook"></i></a>
+                        <a href=""><i class="fa-brands fa-youtube"></i></a>
+                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                        <a href=""><i class="fa-brands fa-square-instagram"></i></a>
+                        <a href=""><i class="fa-brands fa-apple"></i></a>
+                    </div>
+                    <div class="footer-para">
+                        <p>Terms and Conditions</p>
+                        <p>Privacy Policy</p>
+                        <p>Cookie Policy</p>
+                        <p>Privacy Settings</p>
+                    </div>
+                </div>
+                 <p class="last-one">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+            </section>
     </footer>
 </body>
 </html>
