medium responsive added

--- a/index.html
+++ b/index.html
@@ -66,15 +66,34 @@
                 </div>
                 <div class="funny-img-container">
                     <figure class="fig"><img src="/images/Rectangle 4.png" alt="">
+                        <div id="overlay">
+                            <div class="overlay-content">
+                                <button class="o"><img src="/images/play (1).png" alt=""></button>
+                                 <a href="">Watch now</a>
+                             </div>
+                        </div>    
+                        
                         <p>No Download. No Installs. Play games Instantly on Gamer.</p>
                     </figure>
                     <figure class="fig"><img src="/images/Rectangle 5.png" alt="">
+                        <div class="overlay-content">
+                            <button class="o"><img src="/images/play (1).png" alt=""></button>
+                             <a href="">Watch now</a>
+                         </div>
                         <p>Did you score? #unblockedgames #school</p>
                     </figure>
                     <figure class="fig"><img src="/images/Rectangle 7.png" alt="">
+                        <div class="overlay-content">
+                            <button class="o"><img src="/images/play (1).png" alt=""></button>
+                             <a href="">Watch now</a>
+                         </div>
                         <p>Breaking game records like OG</p>
                     </figure>
                     <figure class="fig"><img src="/images/Rectangle 6.png" alt="">
+                        <div class="overlay-content">
+                            <button class="o"><img src="/images/play (1).png" alt=""></button>
+                             <a href="">Watch now</a>
+                         </div>
                         <p>Busted gaming on school laptop, but you are still lit.</p>
                     </figure>
                     
