--- a/index.html
+++ b/index.html
@@ -179,7 +179,10 @@
                         <p>Privacy Settings</p>
                     </div>
                 </div>
-                 <p class="last-one">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+                <small class="last-one">
+                    Play Games @ Gamer @ 2000-2023 Gamer Bangladesh
+                </small>
+                 
             </section>
     </footer>
 </body>
