--- a/index.html
+++ b/index.html
@@ -65,33 +65,33 @@
                     <p class="funny-des">A Collection of Hilarious Videos to Brighten Your Day</p>
                 </div>
                 <div class="funny-img-container">
-                    <figure class="fig"><img src="/images/Rectangle 4.png" alt="">
+                    <figure class="fig"><img src="./images/Rectangle 4.png" alt="">
                         <div id="overlay">
                             <div class="overlay-content">
-                                <button class="o"><img src="/images/play (1).png" alt=""></button>
+                                <button class="o"><img src="./images/play (1).png" alt=""></button>
                                  <a href="">Watch now</a>
                              </div>
                         </div>    
                         
                         <p>No Download. No Installs. Play games Instantly on Gamer.</p>
                     </figure>
-                    <figure class="fig"><img src="/images/Rectangle 5.png" alt="">
+                    <figure class="fig"><img src="./images/Rectangle 5.png" alt="">
                         <div class="overlay-content">
-                            <button class="o"><img src="/images/play (1).png" alt=""></button>
+                            <button class="o"><img src="./images/play (1).png" alt=""></button>
                              <a href="">Watch now</a>
                          </div>
                         <p>Did you score? #unblockedgames #school</p>
                     </figure>
-                    <figure class="fig"><img src="/images/Rectangle 7.png" alt="">
+                    <figure class="fig"><img src="./images/Rectangle 7.png" alt="">
                         <div class="overlay-content">
-                            <button class="o"><img src="/images/play (1).png" alt=""></button>
+                            <button class="o"><img src="./images/play (1).png" alt=""></button>
                              <a href="">Watch now</a>
                          </div>
                         <p>Breaking game records like OG</p>
                     </figure>
-                    <figure class="fig"><img src="/images/Rectangle 6.png" alt="">
+                    <figure class="fig"><img src="./images/Rectangle 6.png" alt="">
                         <div class="overlay-content">
-                            <button class="o"><img src="/images/play (1).png" alt=""></button>
+                            <button class="o"><img src="./images/play (1).png" alt=""></button>
                              <a href="">Watch now</a>
                          </div>
                         <p>Busted gaming on school laptop, but you are still lit.</p>
@@ -123,25 +123,25 @@
         <section class="type">
             <div class="type-of-games">
                 <div class="t-fig-container">
-                    <figure class="t-fig"><img src="/images/Rectangle 11.png" alt="">
+                    <figure class="t-fig"><img src="./images/Rectangle 11.png" alt="">
                         <figcaption>Action Games</figcaption></figure>
-                    <figure class="t-fig"><img src="/images/Rectangle 12.png" alt="">
+                    <figure class="t-fig"><img src="./images/Rectangle 12.png" alt="">
                         <figcaption>Adventure Games</figcaption></figure>
-                    <figure class="t-fig"><img src="/images/Rectangle 13.png" alt="">
+                    <figure class="t-fig"><img src="./images/Rectangle 13.png" alt="">
                         <figcaption>Arcade Games</figcaption></figure>
-                    <figure class="t-fig"><img src="/images/Rectangle 14.png" alt="">
+                    <figure class="t-fig"><img src="./images/Rectangle 14.png" alt="">
                         <figcaption>Educational Games</figcaption></figure>
-                    <figure class="t-fig"><img src="/images/Rectangle 15.png" alt="">
+                    <figure class="t-fig"><img src="./images/Rectangle 15.png" alt="">
                         <figcaption>Word Games</figcaption></figure>
                 </div>
                 <div class="t-fig-container-2">
-                    <figure class="t-fig"><img src="/images/Rectangle 16.png" alt="">
+                    <figure class="t-fig"><img src="./images/Rectangle 16.png" alt="">
                         <figcaption>Role Palying Games</figcaption></figure>
-                    <figure class="t-fig"><img src="/images/Rectangle 17.png" alt="">
+                    <figure class="t-fig"><img src="./images/Rectangle 17.png" alt="">
                         <figcaption>Music & Audio Games</figcaption></figure>
-                    <figure class="t-fig"><img src="/images/Rectangle 18.png" alt="">
+                    <figure class="t-fig"><img src="./images/Rectangle 18.png" alt="">
                         <figcaption>Puzzle Games</figcaption></figure>
-                    <figure class="t-fig"><img src="/images/Rectangle 19.png" alt="">
+                    <figure class="t-fig"><img src="./images/Rectangle 19.png" alt="">
                         <figcaption>Strategy Games</figcaption></figure>
                 </div>
             </div>
