--- a/index.html
+++ b/index.html
@@ -119,6 +119,30 @@
                 </div>
             </div>
         </section>
+        <section class="careers">
+            <div class="career">
+                <h3 class="career-title">Careers</h3>
+                <div class="career-des">Gamer is driven to create the best and most fun games for our millions of players all around the world, and we,re always on the lookout for more top talent to join our growing team. If you,d like to help us make great games and be a part of Gamers bright future, we,d love to hear from you.</div>
+                <div class="career-list">
+                    Multimedia Artist +<br>
+                    Data Engineer +<br>
+                    Adroid Engineer +<br>
+                    Server Developer +<br>
+                    Group Financial Accountant +<br>
+                    Senior User Acuisition Specialist +<br>
+                    <div class="c-locations">
+                        Lisbon, Portugal <br>
+                        Lisbon, Portugal <br>
+                        Zoetermeer, Netherlands <br>
+                        Lisbon, Portugal <br>
+                        London, United Kingdom <br>
+                        Lisbon, Portugal <br>
+                    </div>
+                </div>
+                <button class="btn-career">See all positions</button>
+            </div>
+                <img class="career-pic" src="./images/Group 65.png" alt="">
+        </section>
 
         <section class="type">
             <div class="type-of-games">
